Updated Debug Info API, tried to fix block entity bugs.