@@ -7,14 +7,12 @@ import com.ultreon.randomthingz.item.crafting.AlloySmeltingRecipe;
 import com.ultreon.randomthingz.util.Constants;
 import com.ultreon.randomthingz.util.TextUtils;
 import mezz.jei.api.constants.VanillaTypes;
-import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
-import mezz.jei.api.gui.builder.IRecipeSlotBuilder;
+import mezz.jei.api.gui.IRecipeLayout;
 import mezz.jei.api.gui.drawable.IDrawable;
 import mezz.jei.api.gui.drawable.IDrawableAnimated;
-import mezz.jei.api.gui.ingredient.IRecipeSlotsView;
+import mezz.jei.api.gui.ingredient.IGuiItemStackGroup;
 import mezz.jei.api.helpers.IGuiHelper;
-import mezz.jei.api.recipe.IFocusGroup;
-import mezz.jei.api.recipe.RecipeIngredientRole;
+import mezz.jei.api.ingredients.IIngredients;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
@@ -24,6 +22,7 @@ import net.minecraft.world.item.crafting.Ingredient;
 
 import java.util.Arrays;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class AlloySmeltingRecipeCategoryJei implements IRecipeCategory<AlloySmeltingRecipe> {
     private static final int GUI_START_X = 16;
@@ -69,50 +68,41 @@ public class AlloySmeltingRecipeCategoryJei implements IRecipeCategory<AlloySmel
         return icon;
     }
 
-//    @Override
-//    public void setIngredients(AlloySmeltingRecipe recipe, IIngredients ingredients) {
-//        ingredients.setInputLists(VanillaTypes.ITEM, recipe.getIngredientMap().keySet().stream()
-//                .map(ingredient -> Arrays.asList(ingredient.getItems()))
-//                .toList());
-//        ingredients.setOutput(VanillaTypes.ITEM, recipe.getResultItem());
-//    }
+    @Override
+    public void setIngredients(AlloySmeltingRecipe recipe, IIngredients ingredients) {
+        ingredients.setInputLists(VanillaTypes.ITEM, recipe.getIngredientMap().keySet().stream()
+                .map(ingredient -> Arrays.asList(ingredient.getItems()))
+                .collect(Collectors.toList()));
+        ingredients.setOutput(VanillaTypes.ITEM, recipe.getResultItem());
+    }
 
     @Override
-    public void setRecipe(IRecipeLayoutBuilder builder, AlloySmeltingRecipe recipe, IFocusGroup focuses) {
-        IRecipeSlotBuilder[] inputs = new IRecipeSlotBuilder[]{
-                builder.addSlot(RecipeIngredientRole.INPUT, 16 - GUI_START_X, 34 - GUI_START_Y),
-                builder.addSlot(RecipeIngredientRole.INPUT, 34 - GUI_START_X, 34 - GUI_START_Y),
-                builder.addSlot(RecipeIngredientRole.INPUT, 52 - GUI_START_X, 34 - GUI_START_Y),
-                builder.addSlot(RecipeIngredientRole.INPUT, 70 - GUI_START_X, 34 - GUI_START_Y)
-        };
-        builder.addSlot(RecipeIngredientRole.OUTPUT, 125 - GUI_START_X, 34 - GUI_START_Y).addItemStack(recipe.getResultItem());
-
-//        IGuiItemStackGroup itemStacks = builder.getItemStacks();
-//        itemStacks.init(0, true, 16 - GUI_START_X, 34 - GUI_START_Y);
-//        itemStacks.init(1, true, 34 - GUI_START_X, 34 - GUI_START_Y);
-//        itemStacks.init(2, true, 52 - GUI_START_X, 34 - GUI_START_Y);
-//        itemStacks.init(3, true, 70 - GUI_START_X, 34 - GUI_START_Y);
-//        itemStacks.init(4, false, 125 - GUI_START_X, 34 - GUI_START_Y);
+    public void setRecipe(IRecipeLayout recipeLayout, AlloySmeltingRecipe recipe, IIngredients ingredients) {
+        IGuiItemStackGroup itemStacks = recipeLayout.getItemStacks();
+        itemStacks.init(0, true, 16 - GUI_START_X, 34 - GUI_START_Y);
+        itemStacks.init(1, true, 34 - GUI_START_X, 34 - GUI_START_Y);
+        itemStacks.init(2, true, 52 - GUI_START_X, 34 - GUI_START_Y);
+        itemStacks.init(3, true, 70 - GUI_START_X, 34 - GUI_START_Y);
+        itemStacks.init(4, false, 125 - GUI_START_X, 34 - GUI_START_Y);
 
         int i = 0;
         for (Map.Entry<Ingredient, Integer> entry : recipe.getIngredientMap().entrySet()) {
             Ingredient ingredient = entry.getKey();
             Integer count = entry.getValue();
-            inputs[i++].addItemStacks(Arrays.stream(ingredient.getItems())
+            itemStacks.set(i++, Arrays.stream(ingredient.getItems())
                     .map(s -> {
                         ItemStack stack = s.copy();
                         stack.setCount(count);
                         return stack;
                     })
-                    .toList()
+                    .collect(Collectors.toList())
             );
         }
-
-//        itemStacks.set(4, recipe.getResultItem());
+        itemStacks.set(4, recipe.getResultItem());
     }
 
     @Override
-    public void draw(AlloySmeltingRecipe recipe, IRecipeSlotsView slotsView, PoseStack pose, double mouseX, double mouseY) {
-        arrow.draw(pose, 92 - GUI_START_X, 35 - GUI_START_Y);
+    public void draw(AlloySmeltingRecipe recipe, PoseStack matrixStack, double mouseX, double mouseY) {
+        arrow.draw(matrixStack, 92 - GUI_START_X, 35 - GUI_START_Y);
     }
 }
